<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.friedrice.cubus.activity.DeparturesActivity"
    android:id="@+id/departuresLayout">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ListView
        android:id="@+id/departures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/noBusesMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:text="No departure times found for this stop"
        android:textSize="28sp"
        android:visibility="gone"/>


</RelativeLayout>
