<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/stopLocation"
        android:title="@string/location"
        android:icon="@drawable/ic_location_on_white_24dp"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/fav"
        android:title="@string/favoriteTitle"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        app:showAsAction="ifRoom"
        />

</menu>